<resources>
    <string name="app_name">Demo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="log_in">Log In</string>
    <string name="email">Email</string>
    <string name="hint_email">Write Your Email</string>
    <string name="hint_name">Write 14 character</string>
    <string name="hint_phone">Write 11 numbers</string>
    <string name="hint_password">Write 8 character at least</string>
    <string name="hint_confirm_password">Write your password again</string>
    <string name="hint_search">Search for fav food …</string>
    <string name="password">Password</string>
    <string name="forgot_the_password">Forgot the password?</string>
    <string name="login">Log in</string>
    <string name="don_t_have_an_account">Don\'t have an account ?</string>
    <string name="sign_up">Sign up</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="have_an_account">have an account?</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="cart">Cart</string>
    <string name="category">Category</string>
    <string name="categories">Categories</string>
    <string name="popular_now">Popular Now</string>
    <string name="trending_now">Trending now</string>
</resources>