<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="viewModel"
            type="com.example.demo.ui.auth.signin.SignInViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/img_background_yghz"
        tools:context=".ui.auth.signin.SignInFragment">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:importantForAccessibility="no"
            android:src="@drawable/img_yghz"
            app:layout_constraintBottom_toTopOf="@+id/consSignIn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/consSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_card_sign"
            android:paddingHorizontal="20dp"
            android:paddingBottom="40dp"
            app:layout_constraintBottom_toBottomOf="parent">

            <TextView
                android:id="@+id/txtLogIn"
                style="@style/styleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/background_text_sign"
                android:elevation="@dimen/text_elevation"
                android:paddingHorizontal="40dp"
                android:paddingVertical="20dp"
                android:text="@string/log_in"
                android:textAllCaps="true"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txtEmailSignIn"
                style="@style/styleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/email"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtLogIn" />

            <EditText
                android:id="@+id/edtEmailSignIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/background_edit_text"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:padding="16dp"
                android:textColorHint="@color/colorTextHint"
                app:layout_constraintTop_toBottomOf="@+id/txtEmailSignIn" />

            <TextView
                android:id="@+id/txtPasswordSignIn"
                style="@style/styleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/password"
                app:layout_constraintStart_toStartOf="@+id/txtEmailSignIn"
                app:layout_constraintTop_toBottomOf="@+id/edtEmailSignIn" />

            <EditText
                android:id="@+id/edtPasswordSignIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/background_edit_text"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:padding="16dp"
                android:textColorHint="@color/colorTextHint"
                app:layout_constraintTop_toBottomOf="@+id/txtPasswordSignIn" />

            <TextView
                android:id="@+id/txtForgetPass"
                style="@style/styleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/forgot_the_password"
                android:textColor="@color/colorTextForgot"
                app:layout_constraintStart_toStartOf="@+id/txtEmailSignIn"
                app:layout_constraintTop_toBottomOf="@+id/edtPasswordSignIn" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnLogIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/background_button"
                android:padding="16dp"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintTop_toBottomOf="@id/txtForgetPass" />

            <TextView
                android:id="@+id/txtNoAccount"
                style="@style/styleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/don_t_have_an_account"
                android:textColor="@color/colorText"
                app:layout_constraintEnd_toEndOf="@id/btnLogIn"
                app:layout_constraintEnd_toStartOf="@+id/txtSignUpSignIn"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="@+id/btnLogIn"
                app:layout_constraintTop_toBottomOf="@+id/btnLogIn" />

            <TextView
                android:id="@+id/txtSignUpSignIn"
                style="@style/styleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/sign_up"
                android:onClick="@{()->viewModel.navigateToSignUp()}"
                android:textColor="@color/colorPrimary"
                app:layout_constraintBottom_toBottomOf="@+id/txtNoAccount"
                app:layout_constraintEnd_toEndOf="@+id/btnLogIn"
                app:layout_constraintStart_toEndOf="@+id/txtNoAccount"
                app:layout_constraintTop_toTopOf="@+id/txtNoAccount" />
        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>