<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="name"
            type="String" />

        <variable
            name="viewModel"
            type="com.example.demo.ui.home.HomeViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.home.HomeFragment">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardToolBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            app:cardElevation="5dp"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolBar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
                app:menu="@menu/menu_home"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:titleCentered="true"
                app:titleTextColor="@color/colorText" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/txtHello"
            style="@style/styleText"
            bindHelloText="@{name}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardToolBar"
            tools:text="Hello Ahmed" />

        <EditText
            android:id="@+id/edtSearch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/background_edit_text"
            android:hint="@string/hint_search"
            android:inputType="textEmailAddress"
            app:layout_constraintStart_toStartOf="@+id/txtHello"
            android:padding="16dp"
            app:layout_constraintEnd_toStartOf="@+id/btnSearch"
            android:textColorHint="@color/colorTextHint"
            app:layout_constraintTop_toBottomOf="@+id/txtHello" />

        <ImageButton
            android:id="@+id/btnSearch"
            app:layout_constraintTop_toTopOf="@+id/edtSearch"
            app:layout_constraintBottom_toBottomOf="@+id/edtSearch"
            app:layout_constraintStart_toEndOf="@+id/edtSearch"
            android:src="@drawable/ic_search"
            android:layout_marginStart="10dp"
            android:background="@drawable/background_ic_search"
            android:padding="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <ImageButton
            android:id="@+id/btnFilter"
            app:layout_constraintTop_toTopOf="@+id/btnSearch"
            app:layout_constraintBottom_toBottomOf="@+id/btnSearch"
            app:layout_constraintStart_toEndOf="@+id/btnSearch"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/ic_filter"
            android:padding="5dp"
            android:layout_marginHorizontal="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/txtCategories"
            style="@style/styleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="@string/categories"
            app:layout_constraintBottom_toTopOf="@+id/recyclerCategories"
            app:layout_constraintStart_toStartOf="@+id/txtHello"
            app:layout_constraintTop_toBottomOf="@+id/edtSearch"
            tools:text="categories" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerCategories"
            app:layout_constraintTop_toBottomOf="@+id/txtCategories"
            app:layout_constraintBottom_toTopOf="@+id/txtPopular"
            bindRecyclerLayout="@{true}"
            android:layout_width="match_parent"
            android:layout_height="0dp"/>

        <TextView
            android:id="@+id/txtPopular"
            style="@style/styleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="@string/popular_now"
            app:layout_constraintBottom_toTopOf="@id/recyclerPopular"
            app:layout_constraintStart_toStartOf="@+id/txtHello"
            app:layout_constraintTop_toBottomOf="@+id/recyclerCategories"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerPopular"
            app:layout_constraintTop_toBottomOf="@+id/txtPopular"
            bindRecyclerLayout="@{true}"
            app:layout_constraintBottom_toTopOf="@+id/txtTrending"
            android:layout_width="match_parent"
            android:layout_height="0dp"/>

        <TextView
            android:id="@+id/txtTrending"
            style="@style/styleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="@string/trending_now"
            app:layout_constraintBottom_toTopOf="@id/recyclerTrending"
            app:layout_constraintStart_toStartOf="@+id/txtHello"
            app:layout_constraintTop_toBottomOf="@+id/recyclerPopular"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerTrending"
            app:layout_constraintTop_toBottomOf="@+id/txtTrending"
            app:layout_constraintBottom_toBottomOf="parent"
            bindRecyclerLayout="@{true}"
            android:layout_width="match_parent"
            android:layout_height="0dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>